change image ULLs

--- a/views/main.html
+++ b/views/main.html
@@ -2,30 +2,39 @@
 <h3>ブラウザをスクロールさせてください。</h3>
     <br>
     <br>
-    <img src="bower_components/jquery.lazyload/img/grey.gif" data-src="bower_components/jquery.lazyload/img/bmw_m1_hood.jpg" width="300" class="lazy">
+    <img src="images/noimage.gif" data-src="images/sunset.jpg" class="lazy">
     <br>
     <br>
     <br>
     <br>
-    <img src="bower_components/jquery.lazyload/img/grey.gif" data-src="bower_components/jquery.lazyload/img/bmw_m1_hood.jpg" width="300" class="lazy">
     <br>
     <br>
     <br>
     <br>
-    <img src="bower_components/jquery.lazyload/img/grey.gif" data-src="bower_components/jquery.lazyload/img/bmw_m1_hood.jpg" width="300" class="lazy">
     <br>
     <br>
     <br>
     <br>
-    <img src="bower_components/jquery.lazyload/img/grey.gif" data-src="bower_components/jquery.lazyload/img/bmw_m1_hood.jpg" width="300" class="lazy">
     <br>
     <br>
     <br>
     <br>
-    <img src="bower_components/jquery.lazyload/img/grey.gif" data-src="bower_components/jquery.lazyload/img/bmw_m1_hood.jpg" width="300" class="lazy">
+    <img src="images/noimage.gif" data-src="images/sunset.jpg" class="lazy">
     <br>
     <br>
     <br>
     <br>
-    <img src="bower_components/jquery.lazyload/img/grey.gif" data-src="bower_components/jquery.lazyload/img/bmw_m1_hood.jpg" width="300" class="lazy">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <img src="images/noimage.gif" data-src="images/sunset.jpg" class="lazy">
 </div>
